# otus-sunia-house

./: README.md  package-lock.json  package.json
.github/workflows/: extracting-spreadsheet.yml  initialize.yml
extracting-py/: pyproject.toml
extracting-spreadsheet/: .clasp.json  .eslintrc.cjs  .prettierignore  package-lock.json  package.json  tsconfig.json
extracting-spreadsheet/src/: Code.ts
